<resources>
    <string name="app_name">爱理财</string>

    <string name="network_exception">网络加载失败</string>
    <string name="service_exception">服务器迷路啦，稍后再来哦</string>
    <string name="no_connection_error">网络没有连接，请联网后重试</string>
    <string name="timeout_Error">连接超时，请稍后重试</string>

    <!--Update Version-->
    <string name="update_version_cancel">取消</string>
    <string name="update_version_exit">退出</string>
    <string name="update_version_update">更新</string>
    <string name="update_version_confirm">确定</string>
    <string name="download_iwjw_title">正在下载</string>
    <string name="download_percent_notifacation">爱屋吉屋%1$s下载中</string>
    <string name="download_finished">爱屋吉屋%1$s下载完成，点击安装</string>
    <string name="sd_broken">SD卡不可用</string>

    <!-- tab bar name string -->
    <string name="tab_nvg_index">首页</string>
    <string name="tab_nvg_invest">投资</string>
    <string name="tab_nvg_me">我的</string>

    <!-- Login -->
    <string name="login_auto_text">登录中...</string>
    <string name="auth_code">验证码</string>
    <string name="to_login_text">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number1">请输入手机号码</string>
    <string name="validate_phone_auth_code">发送验证码</string>
    <string name="validate_phone_auth_code_retry">重新获取</string>
    <string name="validate_auth_code_hint">输入验证码</string>
    <string name="validate_auth_code_hint2">验证码</string>
    <string name="validate_voice_auth_code">收不到验证码?</string>
    <string name="auth_code_time_num">%1$d秒后重新获取</string>
    <string name="permit_agreement_text"><![CDATA[<font color="#757575">注册/登录即代表您同意</font><font color="#212121">《爱理财平台服务协议》</font>]]></string>
    <string name="login_card_dialog"><![CDATA[恭喜您获得<br/>%1$s]]></string>
    <string name="permit_agreement_title_text">《爱理财平台服务协议》</string>

    <!-- Mine -->
    <string name="personal_phone_modify_success">手机号更换成功</string>
    <string name="personal_new_phone_modify">新手机号</string>
    <string name="personal_phone_modify_title">变更电话</string>
    <string name="personal_phone_modify_tips_1">需要验证您原有电话 %s</string>
    <string name="personal_phone_modify_tips_2">新号码将作为您以后的登录号码</string>
    <string name="personal_phone_modify_next">下一步</string>
    <string name="personal_phone_modify_ok">完成</string>
    <string name="personal_phone_validate_success">验证成功</string>
    <string name="personal_phone_validate_title">变更电话</string>
    <string name="loginout_tips_text">您确定要退出登录吗？</string>
    <string name="mine_login_btn_text">登录/注册</string>
    <string name="mine_order_title">我的订单</string>
    <string name="mine_password_manage_title">交易密码</string>
    <string name="mine_change_agent">经纪人</string>
    <string name="mine_complaint_text">我的投诉</string>
    <string name="mine_owner_text">我的委托</string>
    <string name="mine_purchase_notice">购房须知</string>
    <string name="mine_bank_card">银行卡</string>
    <string name="mine_encyclopedias">购房攻略</string>
    <string name="mine_help_center">帮助与反馈</string>
    <string name="mine_service_tell_txt"><![CDATA[<font color="#212121">客服电话:</font><font color="#4a90e2">%s</font>]]></string>
    <string name="mine_current_version">%1$s%2$s%3$s</string>
    <string name="mine_current_version_default">版本</string>
    <string name="brand_department_appointment_record">品牌公寓约看记录</string>
    <string name="my_password_manage_tips_txt">用于理财购买 / 转出</string>

    <string name="personal_gender_cancel">取消</string>
    <string name="capital_order_date">预约时间</string>
    <string name="capital_order_deadline">预约期限</string>
    <string name="ok">确定</string>

    <string name="finance_system_fixing">当前系统正在升级维护中，维护期间暂停爱理财相关服务（转入、转出、购买、转让等），%s。望提前知晓，给你带来不便，还请谅解。</string>
    <string name="title_activity_buy_rebate_voucher">在线支付</string>

    <string name="input_text">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>

    <string name="reserve_pre_buy_time">预约成功后，%1s将为您提前申购以上房产宝</string>


    <string name="common_question_title_1">1.什么是房产宝？</string>
    <string name="common_question_title_2">2.房产宝支持赎回吗？</string>
    <string name="common_question_title_3">3.房产宝购买有什么要求？</string>
    <string name="common_question_title_4">4.房产宝怎么计算收益？</string>
    <string name="common_question_title_5">5.房产宝产品抢购失败，购买资金如何处理？</string>
    <string name="common_question_title_6">6.房产宝的抢购时间？</string>
    <string name="common_question_title_7">7.如何联系我们？</string>
    <string name="common_question_answer_1">答：爱理财房产宝项目均来自爱屋吉屋平台下真实的房地产交易，资金主要用于借款人赎楼、付尾款等短期周转，借款信息真实可信，还款来源可靠有保障，有专业团队对全流程进行风险把控。</string>
    <string name="common_question_answer_2">答：目前暂时不支持赎回功能，敬请期待。</string>
    <string name="common_question_answer_3">答：购买房产宝起投金额为1000元的整数倍，并且只能通过钱包资金来购买。</string>
    <string name="common_question_answer_4">答：在申购期内，您的投资金额会锁定在钱包内，继续享受钱包收益，申购完成后下个工作日会统一转入所投资的房产宝项目内，开始按照预计的房产宝利率计算收益，项目到期后下个工作日会将本金和利息同时转入钱包中。由于存在借款人提前还款的情况，具体借款期限以实际还款日期为准。</string>
    <string name="common_question_answer_5">答：用于申购房产宝产品的钱包资金在成功购买前只是作冻结处理并非直接扣减，冻结的钱包资金正常享受钱包收益。若抢购失败此部分冻结资金自动解冻。</string>
    <string name="common_question_answer_6">答：房产宝产品的固定开售时间为每个工作日早上10:30，其余时间不定时发售。</string>
    <string name="common_question_answer_7">答：如有问题联系我们，祝您抢购成功！</string>
    <string name="cancel">取消</string>

    <string name="gesture_lock_view_set_lock_tip">请绘制手势密码</string>
    <string name="gesture_lock_view_set_unpattern">为了您的账户安全，请至少连续绘制4个点</string>
    <string name="gesture_lock_view_reconfirm">再次绘制手势密码</string>
    <string name="gesture_lock_view_unpattern">与上次绘制不一致，请重新绘制</string>
    <string name="gesture_lock_view_pattern">设置成功</string>
    <string name="gesture_lock_view_unpattern_tip">密码错误%1$d次，还可以再试%2$d次</string>
    <string name="gesture_lock_view_verify_tip">请输入原手势密码</string>
    <string name="gesture_lock_view_forget_pwd_tip">忘记手势密码</string>
    <string name="gesture_lock_view_change_user_tip">切换其他账号</string>
    <string name="gesture_lock_view_user_setting_tip">开启后，进入爱理财客户端需要验证此手势密码。</string>

    <!--自动投标-->
    <string name="automatic_net_balance">持有网贷资产  %s元</string>
    <string name="automatic_account_balance">账户可用余额  %s元</string>
    <string name="automatic_close_tip">您尚未保存自动投标，是否退出</string>
    <string name="automatic_exit_tip">确认关闭自动投标吗，您的资金有可能站岗哦</string>
</resources>
